@@ -29,6 +29,7 @@ version <next>:
 - VAAPI-accelerated format conversion and scaling
 - libnpp/CUDA-accelerated format conversion and scaling
 - Duck TrueMotion 2.0 Real Time decoder
+- Wideband Single-bit Data (WSD) demuxer
 
 version 3.0:
 - Common Encryption (CENC) MP4 encoding and decoding support
